BNF.txt
[<A>] - лексема <A> 0 или 1 раз
{<B>} - лексема <B> любое количество раз (возможно 0)


<query> ::= (<create> | <select> | <update> | <insert> | <delete> | <drop>) ;


<create> ::= CREATE TABLE <name> ( {<name> <data_type> {<constraint>} {,<name> <data_type> {<constraint>}} {<foreign_key>})
<data_type> ::= <varchar_type> | FLOAT | INT | BOOL | DOUBLE | VARCHAR
<constraint> ::= PRIMARY KEY | UNIQUE | NOT NULL | DEFAULT <value>
<foreign_key> ::= FOREIGN KEY (<name>) REFERENCES <name> (<name>)


<select> ::= SELECT (* | SELECT <name> {,<name>}) <from> [<where>]
<where> ::= WHERE <exp>
<from> ::= FROM <name> [<join>]
<join> ::= INNER|LEFT|RIGHT JOIN <name> ON <name> = <name>


<update> ::= UPDATE <name> SET <key_value> {,<key_value>} [,<where>]
<insert> ::= INSERT INTO <name> (<name> {, <name>}) VALUES (<value> {, <value>})
<delete> ::= DELETE FROM <name> [<where>]
<drop> ::= DROP TABLE <name>

<key_value> ::= <name> = <exp>
<name> ::= 'anything at all'
<value> ::= <bool> | <int> | <float> | <varchar>
<bool> ::= true | false
<int> ::= <int>
<float> ::= <float>
<varchar> ::= '{any symbol but \' }'
<const> ::= <value> | <name>


<exp> ::= (rpn)
